--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,33 +20,33 @@
     {% endif %}
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        {% if site.logo %}
+    <header class="page-header" role="banner">
+      {% if site.logo %}
+        <a href="{{ "/" | absolute_url }}">
           <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
+        </a>
+      {% endif %}
 
-        <h2><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h2>
+      <h1>{{ site.title | default: site.github.repository_name }}</h1>
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+      <h3>{{ site.description | default: site.github.project_tagline }}</h3>
 
-        <p><small>Feel free to <a href="mailto:{{ site.email }}">get in touch with me</a> if you think I can help with your project or just have a question.</small></p>
-        <h2><a href="{{ site.baseurl }}/posts">Check out the blog</a></h2>
+      <a class="btn" href="{{ site.baseurl }}/posts">Check out the blog</a>
 
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-      </header>
-      <section>
+      {% if site.show_downloads %}
+      <ul class="downloads">
+        <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+        <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+        <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+      </ul>
+      {% endif %}
+    </header>
+    <main id="content" class="main-content" role="main">
 
       {{ content }}
 
-      </section>
-      <footer>
+      <footer class="site-footer">
+        <p>Feel free to <a href="mailto:{{ site.email }}">get in touch with me</a> if you think I can help with your project or just have a question.</p>
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
@@ -55,7 +55,7 @@
         <p class="view"><a href="{{ site.linkedin_url }}"><span class="icon">{% include icon-linkedin.svg %}</span> LinkedIn</a></p>
 
       </footer>
-    </div>
+    </main>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
