--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,23 @@
     <meta property="article:tag" content="{{ tag }}">
     {% endfor %}
     {% endif %}
+    {% if site.matomo %}
+    <!-- Matomo -->
+    <script type="text/javascript">
+      var _paq = _paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//{{- site.matomo.uri -}}/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', '{{- site.matomo.site_id -}}']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Piwik Code -->
+    {% endif %}
   </head>
   <body>
     <header class="page-header" role="banner">
@@ -53,10 +70,17 @@
 
         <p class="view"><a href="{{ site.github.owner_url }}"><span class="icon">{% include icon-github.svg %}</span> GitHub</a></p>
         <p class="view"><a href="{{ site.linkedin_url }}"><span class="icon">{% include icon-linkedin.svg %}</span> LinkedIn</a></p>
+        {% if site.matomo %}
+          {% if site.matomo.opt-out %}
+            <a href="http://{{- site.matomo.uri -}}/index.php?module=CoreAdminHome&action=optOut" target="_blank" class="text_muted">Do not track</a>
+          {% endif %}
+        {% endif%}
 
       </footer>
     </main>
+    {% if site.theme == "jekyll-theme-minimal" %}
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    {% endif %}
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
