--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,11 @@
         </a>
       {% endif %}
 
-      <h1>{{ site.title | default: site.github.repository_name }}</h1>
+      <h1>
+        <a href="{{ "/" | absolute_url }}" style="color:white">
+          {{ site.title | default: site.github.repository_name }}
+        </a>
+      </h1>
 
       <h3>{{ site.description | default: site.github.project_tagline }}</h3>
 
